--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,434 @@
+body {
+  background: #333c4a;
+  margin: 0px;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+.Btn {
+  width: 40px;
+  cursor: pointer;
+}
+.Btn img {
+  width: 100%;
+}
+.hidden {
+  display: none !important;
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes grow {
+  from {
+    width: 0px;
+  }
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.App .nav {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-item: center;
+  flex-direction: column;
 }
-
-.App-link {
-  color: #61dafb;
+.App .nav .list {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.App .nav .list:before {
+  flex-grow: 1;
+  content: "";
+}
+.App .nav .list:after {
+  flex-grow: 1;
+  content: "";
+}
+.App .nav .list a {
+  flex-grow: 1;
+  justify-content: center;
+  display: flex;
+  text-decoration: none;
+  color: #d3d6db;
+}
+.App .nav .list .selected {
+  color: #fff;
+}
+.App .nav-mob {
+  display: flex;
+  justify-content: center;
+  align-item: center;
+  flex-direction: column;
+}
+.App .nav-mob .bkgImg {
+  width: 100%;
+}
+.App .nav-mob .sideBar {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.App .nav-mob .list {
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  animation: fadein 0.3s;
+  position: absolute;
+  right: 10px;
+  top: 50px;
+  padding: 20px;
+}
+.App .nav-mob .list a {
+  color: #fff;
+  text-decoration: none;
+  border-bottom: solid white 1px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.App .view {
+  margin-top: 50px;
+  max-width: 1400px;
+  width: 80%;
+  position: relative;
+}
+.App .view .about {
+  display: flex;
+}
+.App .view .about .avatar {
+  margin-right: 10%;
+}
+.App .view .about .avatar img {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.App .view .about .content {
+  color: #eff0f4;
+}
+.App .view .about-mob {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.App .view .about-mob .avatar {
+  width: 50%;
+}
+.App .view .about-mob .avatar img {
+  width: 100%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.App .view .about-mob .content {
+  margin-top: 20px;
+  width: 100%;
+  word-break: break-word;
+  font-size: 1.5em;
+  font-family: "Sitka Display";
+  color: #eff0f4;
+}
+.App .view .photography {
+  display: flex;
+  flex-wrap: wrap;
+}
+.App .view .photography .photo-item {
+  width: calc(33% - 25px);
+  margin: 10px;
+}
+.App .view .photography .photo-item img {
+  width: 100%;
+  border: 3px solid #d3d6db;
+  cursor: pointer;
+}
+@media screen and (max-width: 1400px) {
+  .App .view .photography .photo-item {
+    width: calc(49% - 25px);
   }
-  to {
-    transform: rotate(360deg);
-  }
 }
+.App .view .photography-mob {
+  display: flex;
+  flex-wrap: wrap;
+}
+.App .view .photography-mob .photo-item {
+  width: calc(100% - 25px);
+  margin: 10px;
+}
+.App .view .photography-mob .photo-item img {
+  width: 100%;
+  border: 3px solid #d3d6db;
+  cursor: pointer;
+}
+.App .view .resume {
+  color: #cde3eb;
+}
+.App .view .resume h1 {
+  margin-bottom: 5px;
+}
+.App .view .resume h3 {
+  margin-top: 5px;
+}
+.App .view .resume .information {
+  display: flex;
+}
+.App .view .resume .information .education {
+  width: 50%;
+}
+.App .view .resume .information .education div {
+  font-family: Consolas;
+  font-size: 20px;
+}
+.App .view .resume .information .education .time {
+  font-weight: bold;
+  font-size: 24px;
+}
+.App .view .resume .information .honours {
+  width: 50%;
+}
+.App .view .resume .information .honours div {
+  margin-bottom: 20px;
+  font-family: Consolas;
+  font-size: 20px;
+}
+.App .view .resume .projects {
+  margin-bottom: 50px;
+}
+.App .view .resume .projects .m-project {
+  font-family: Consolas;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.App .view .resume .projects .m-project a {
+  font-family: "Impact";
+  color: #cde3eb;
+  font-size: 30px;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+.App .view .resume .projects .m-project a:hover {
+  color: #e3eff3;
+}
+.App .view .resume .skills h1 {
+  font-size: 40px;
+}
+.App .view .resume .skills .m-skill {
+  display: flex;
+  align-items: center;
+}
+.App .view .resume .skills .m-skill .name {
+  font-family: consolas;
+  font-size: 28px;
+  flex-basis: 0px;
+  flex-grow: 1;
+}
+.App .view .resume .skills .m-skill .barContainer {
+  align-items: center;
+  flex-grow: 4;
+  flex-basis: 0px;
+}
+.App .view .resume .skills .m-skill .barContainer .bar {
+  animation: grow 3s;
+  background: white;
+  height: 10px;
+  border-radius: 5px;
+}
+.App .view .resume-mob {
+  color: #cde3eb;
+}
+.App .view .resume-mob h1 {
+  margin-bottom: 5px;
+}
+.App .view .resume-mob h3 {
+  margin-top: 5px;
+}
+.App .view .resume-mob .information {
+  display: flex;
+  flex-direction: column;
+}
+.App .view .resume-mob .information .education {
+  margin-bottom: 20px;
+}
+.App .view .resume-mob .information .education div {
+  font-family: Consolas;
+  font-size: 20px;
+}
+.App .view .resume-mob .information .education .time {
+  font-weight: bold;
+  font-size: 24px;
+}
+.App .view .resume-mob .information .honours div {
+  margin-bottom: 20px;
+  font-family: Consolas;
+  font-size: 20px;
+}
+.App .view .resume-mob .projects {
+  margin-bottom: 50px;
+}
+.App .view .resume-mob .projects .m-project {
+  font-family: Consolas;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.App .view .resume-mob .projects .m-project a {
+  font-family: "Impact";
+  color: #cde3eb;
+  font-size: 30px;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+.App .view .resume-mob .projects .m-project a:hover {
+  color: #e3eff3;
+}
+.App .view .resume-mob .skills h1 {
+  font-size: 40px;
+}
+.App .view .resume-mob .skills .m-skill {
+  display: flex;
+  align-items: center;
+}
+.App .view .resume-mob .skills .m-skill .name {
+  font-family: consolas;
+  font-size: 20px;
+  flex-basis: 0px;
+  flex-grow: 1;
+}
+.App .view .resume-mob .skills .m-skill .barContainer {
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: 0px;
+}
+.App .view .resume-mob .skills .m-skill .barContainer .bar {
+  animation: grow 3s;
+  background: white;
+  height: 10px;
+  border-radius: 5px;
+}
+.App .footer {
+  width: 80%;
+  max-width: 1600px;
+  display: flex;
+  margin-top: 30px;
+  align-items: center;
+  color: #d3d6db;
+}
+.App .footer .links {
+  order: -2;
+  bottom: -50px;
+}
+.App .footer .links img {
+  width: 40px;
+}
+.App .footer .links a {
+  margin-right: 15px;
+}
+.App .footer:after {
+  content: "";
+  flex-grow: 1;
+  order: -1;
+}
+.App .footer-mob {
+  width: 80%;
+  max-width: 1600px;
+  display: flex;
+  margin-top: 30px;
+  align-items: center;
+  flex-direction: column;
+  color: #d3d6db;
+}
+.App .footer-mob .links {
+  margin-bottom: 1em;
+}
+.App .footer-mob .links img {
+  width: 40px;
+}
+.App .footer-mob .links a {
+  margin-right: 15px;
+}
+.slider {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadein 0.5s;
+}
+.slider .closeBtn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+.slider .imgContainer {
+  width: 80%;
+  position: relative;
+}
+.slider .imgContainer img {
+  width: 100%;
+}
+.slider .imgContainer .description {
+  width: 100%;
+  position: absolute;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 60px;
+  visibility: hidden;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  bottom: 25px;
+}
+.slider .imgContainer .description-show {
+  visibility: visible;
+  animation: fadein 0.5s;
+}
+.slider-mob {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  animation: fadein 0.5s;
+}
+.slider-mob .closeBtn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+.slider-mob .imgContainer {
+  z-index: 100;
+  width: 80%;
+}
+.slider-mob .imgContainer img {
+  width: 100%;
+}
+.slider-mob .imgContainer .description {
+  margin-top: -5px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+/*# sourceMappingURL=App.css.map */
