--- a/src/App.css
+++ b/src/App.css
@@ -96,9 +96,13 @@ body::-webkit-scrollbar {
 .App .nav-mob .list a {
   color: #fff;
   text-decoration: none;
-  border-bottom: solid white 1px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+.App .nav-mob .list .divider {
+  width: 90%;
+  height: 1px;
+  background: white;
 }
 .App .view {
   margin-top: 50px;
@@ -379,6 +383,7 @@ body::-webkit-scrollbar {
 }
 .slider .imgContainer img {
   width: 100%;
+  animation: fidein 0.5s;
 }
 .slider .imgContainer .description {
   width: 100%;
@@ -393,11 +398,28 @@ body::-webkit-scrollbar {
   display: flex;
   align-items: center;
   padding-left: 20px;
-  bottom: 25px;
+  bottom: 3px;
 }
 .slider .imgContainer .description-show {
   visibility: visible;
   animation: fadein 0.5s;
+}
+.slider .imgContainer .left {
+  position: absolute;
+  width: 5vh;
+  top: 50%;
+  opacity: 50%;
+}
+.slider .imgContainer .right {
+  position: absolute;
+  width: 5vh;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  top: 50%;
+  right: 0px;
 }
 .slider-mob {
   position: fixed;
